ghost-blog/ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-blog
  namespace: ghost-blog
  labels:
    app: ghost-blog
    app.kubernetes.io/name: ghost-blog
    app.kubernetes.io/instance: ghost-blog
    app.kubernetes.io/version: '5.92'
    app.kubernetes.io/component: ghost
    app.kubernetes.io/part-of: ghost-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-blog
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 3
  revisionHistoryLimit: 4
  progressDeadlineSeconds: 600
  template:
    metadata:
      namespace: ghost-blog
      labels:
        app: ghost-blog
    spec:
      automountServiceAccountToken: false
      volumes:
      - name: ghost-content
        persistentVolumeClaim:
          claimName: ghost-content
      - name: tmp
        emptyDir:
          sizeLimit: 64Mi

      containers:
      - name: ghost-blog
        image: ghost:5.114.1-alpine
        imagePullPolicy: Always
        ports:
        - name: ghost
          containerPort: 2368
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ghost/api/v4/admin/site/
            port: ghost
            httpHeaders:
            - name: X-Forwarded-Proto
              value: https
            - name: Host
              value: blog.hensen.io
          periodSeconds: 10
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            path: /ghost/api/v4/admin/site/
            port: ghost
            httpHeaders:
            - name: X-Forwarded-Proto
              value: https
            - name: Host
              value: blog.hensen.io
          periodSeconds: 300
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 1
          initialDelaySeconds: 30
        resources:
          limits:
            cpu: 800m
            memory: 800Mi
          requests:
            cpu: 200m
            memory: 400Mi
        volumeMounts:
        - name: ghost-content
          mountPath: /home/nonroot/app/ghost/content
          readOnly: false
        - name: ghost-config-prod
          readOnly: true
          mountPath: /home/nonroot/app/ghost/config.production.json
          subPath: config.production.json
        - name: tmp
          mountPath: /tmp
          readOnly: false
        - name: ghost-logs
          mountPath: /home/nonroot/app/ghost/versions/5.114.0/content/logs
          readOnly: false
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
      restartPolicy: Always
      terminationGracePeriodSeconds: 15
      dnsPolicy: ClusterFirst
      securityContext:
        seccompProfile:
          type: RuntimeDefault
