ghost-blog/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
  namespace: ghost-blog
  labels:
    app: ghost-blog
    app.kubernetes.io/name: ghost-service
    app.kubernetes.io/instance: ghost-blog
    app.kubernetes.io/version: '5.92'
    app.kubernetes.io/component: service-frontend
    app.kubernetes.io/part-of: ghost-blog
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  ports:
  - port: 2368
    protocol: TCP
    targetPort: ghost
    name: ghost
  type: ClusterIP
  selector:
    app: ghost-blog

---
apiVersion: v1
kind: Service
metadata:
  name: ghost-mysql-service
  namespace: ghost-blog
  labels:
    app: ghost-mysql
    app.kubernetes.io/name: ghost-mysql-service
    app.kubernetes.io/instance: ghost-blog
    app.kubernetes.io/version: '5.92'
    app.kubernetes.io/component: service-database
    app.kubernetes.io/part-of: ghost-blog
  argocd.argoproj.io/sync-wave: "3"
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: mysql
    name: mysql
  type: ClusterIP
  selector:
    app: ghost-mysql
