ghost-blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-blog-ingress
  namespace: ghost-blog
  labels:
    app: ghost-blog
    app.kubernetes.io/name: ghost-blog-ingress
    app.kubernetes.io/instance: ghost-blog
    app.kubernetes.io/version: '5.92'
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: ghost-blog
  annotations:
    cert-manager.io/cluster-issuer: prod-cluster-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: 1G
    argocd.argoproj.io/sync-wave: "7"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - blog.rubenhensen.nl
    secretName: ghost-tls-secret
  rules:
  - host: blog.rubenhensen.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ghost-service
            port:
              name: ghost
